@@ -93,4 +93,5 @@ Below you can find a list of all the options that you can configure and their ex
 * **overrideAttackSpeed**: `true` - If `true` (primarily for 1.14+), overrides the default item attack speed attribute, potentially allowing faster firing rates.
 * **enable_lore_gun-info_messages**: `true` - If `true`, displays weapon statistics like damage, ammo type, etc., in the item's lore text.
 * **enable_lore_gun-bullets**: `false` - If `true`, displays the bullet amount in the item's lore text. This will make the gun go "up and down" when shooting.
+* **weaponSwitchDelay**: `0` - The delay in seconds before a player can fire after switching weapon. A value of `0` means no delay.
 * **DefaultResourcepack**: Defines the resource pack URLs. Refer to [ResourcePack Configuration](resourcepack.md) for more information.
